--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+body {
+  font-family: "PT Sans", sans-serif;
+  background-color: #333;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header,
+main,
+footer {
+  background-color: orange;
+  margin: 2rem;
+  padding: 2rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  padding: 5rem 2rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.box {
+  background-color: white;
+  text-align: center;
+  height: 200px;
+  width: 200px;
+  margin: 1rem;
+  box-shadow: 0 0 5px #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  text-align: center;
 }
