--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,38 @@
-body {
-  font-family: "PT Sans", sans-serif;
-  background-color: #333;
-}
-header,
-main,
-footer {
-  background-color: orange;
-  margin: 2rem;
-  padding: 2rem;
-}
-main {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 5rem 2rem;
-  justify-content: center;
-}
-.box {
-  background-color: white;
+.App {
   text-align: center;
-  height: 200px;
-  width: 200px;
-  margin: 1rem;
-  box-shadow: 0 0 5px #333;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-}
-footer {
-  text-align: center;
-}
-button {
-  background-color: blue;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
-  border: none;
-  border-radius: 5px;
-  box-shadow: 0 0 5px lightcoral;
-  padding: 1rem;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
