--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,16 +10,50 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(131, 58, 180);
-  background: linear-gradient(
-    90deg,
-    rgba(131, 58, 180, 1) 13%,
-    rgba(253, 29, 29, 1) 50%,
-    rgba(252, 176, 69, 1) 93%
-  );
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+header,
+footer {
+  background-color: chocolate;
+  height: 100px;
+  padding: 2rem;
+}
+
+footer {
+  text-align: center;
+}
+
+main {
+  min-height: calc(100vh - 200px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main > div {
+  margin: 0 auto;
+}
+
+.circle {
+  height: 200px;
+  width: 200px;
+  background-color: grey;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  background-color: chocolate;
+  padding: 1rem;
+  border-radius: 5px;
+  border: none;
+  margin: 1rem;
+}
+
+.odd {
+  background-color: darkorange;
+}
+.even {
+  background-color: rgb(101, 44, 3);
 }
